--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,6 +6,9 @@ services:
     image: redis:7-alpine
     ports:
       - "6379:6379"
+    volumes:
+      - redis_data:/data  # Persist Redis data between container restarts
+    command: redis-server --appendonly yes  # Enable AOF persistence for better durability
     networks:
       - my_network
 
@@ -13,3 +16,8 @@ services:
 networks:
   my_network:
     driver: bridge
+
+# Define volumes for data persistence
+volumes:
+  redis_data:
+    driver: local
