--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,12 @@ fastapi
 uvicorn[standard]
 huey[redis]
 redis
+python-dotenv
+
+# langgraph>=0.2.0
+# langchain-core>=0.3.0
+# langchain-openai>=0.2.0
+# langchain-anthropic>=0.2.0
+# pydantic>=2.0.0
+# pydantic-core>=2.0.0
+# typing_extensions>=4.0.0
