--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,46 +14,36 @@ dependencies = [
     "langchain-core==1.0.7",
     "langchain-openai==1.0.3",
     "langchain-anthropic>=1.1.0",
+    "langchain-google-genai>=3.1.0",
+
     # LangGraph
     "langgraph==1.0.3",
     "langgraph-checkpoint==3.0.1",
     "langgraph-prebuilt==1.0.4",
     "langgraph-sdk==0.2.9",
+
     # LangSmith
     "langsmith==0.4.43",
     # Code formatting
-    "black>=24.0.0",
-    "isort>=5.13.0",
     "uvloop>=0.22.1",
     "pydantic>=2.12.4",
     "pydantic-settings>=2.12.0",
     "rich>=14.2.0",
 ]
 
-[tool.black]
-line-length = 120
-target-version = ['py311']
-include = '\.pyi?$'
-extend-exclude = '''
-/(
-  # directories
-  \.eggs
-  | \.git
-  | \.hg
-  | \.mypy_cache
-  | \.tox
-  | \.venv
-  | venv
-  | _build
-  | buck-out
-  | build
-  | dist
-  | __pycache__
-)/
-'''
 
-[tool.isort]
-profile = "black"
-line_length = 100
-skip_gitignore = true
-known_first_party = ["agents", "models", "tasks"]
+[dependency-groups]
+dev = [
+    "ruff>=0.14.6",
+]
+
+[tool.ruff]
+line-length = 150
+
+[tool.ruff.lint]
+# Вмикаємо сортування імпортів (I), стиль коду (E, F) та оновлення до нового синтаксису(UP)
+select = ["E", "F", "I", "UP"]
+
+# Налаштування сортування імпортів
+[tool.ruff.lint.isort]
+known-first-party = ["agents", "tasks", "schemas" ]
