--- a/.env-template
+++ b/.env-template
@@ -2,3 +2,7 @@ REDIS_HOST=redis
 ENVIRONMENT=prod
 OPENAI_API_KEY=your_key
 GOOGLE_API_KEY=your_key
+LANGCHAIN_TRACING_V2=true
+LANGCHAIN_ENDPOINT=https://api.smith.langchain.com
+LANGCHAIN_API_KEY=your_key
+LANGCHAIN_PROJECT=figma-code-gen
