--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,20 +15,18 @@ dependencies = [
     "langchain-openai==1.0.3",
     "langchain-anthropic>=1.1.0",
     "langchain-google-genai>=3.1.0",
-
+    "langsmith==0.4.43",
     # LangGraph
     "langgraph==1.0.3",
     "langgraph-checkpoint==3.0.1",
     "langgraph-prebuilt==1.0.4",
     "langgraph-sdk==0.2.9",
 
-    # LangSmith
-    "langsmith==0.4.43",
-    # Code formatting
     "uvloop>=0.22.1",
     "pydantic>=2.12.4",
     "pydantic-settings>=2.12.0",
     "rich>=14.2.0",
+    "fastapi-limiter>=0.1.6",
 ]
 
 
