--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,11 @@
         "0.0.0.0",
         "--port",
         "8000",
-        "--reload"
+        "--reload",
+        "--ssl-keyfile",
+        "localhost+2-key.pem",
+        "--ssl-certfile",
+        "localhost+2.pem"
       ],
       "justMyCode": false,
       "env": {
