update prod docker setup

--- a/.env-template
+++ b/.env-template
@@ -6,3 +6,9 @@ LANGCHAIN_TRACING_V2=true
 LANGCHAIN_ENDPOINT=https://api.smith.langchain.com
 LANGCHAIN_API_KEY=your_key
 LANGCHAIN_PROJECT=figma-code-gen
+
+# go to https://www.duckdns.org/domains, register, add domain and and get token
+DUCKDNS_TOKEN=your-token
+DUCKDNS_DOMAIN=your.domain.com
+
+ACME_EMAIL=your.email@gmail.com
