api protection. Add docs how to deploy to VPS

--- a/.env-template
+++ b/.env-template
@@ -1,14 +1,24 @@
 REDIS_HOST=redis
 ENVIRONMENT=prod
+
+# API keys for LLMs
 OPENAI_API_KEY=your_key
 GOOGLE_API_KEY=your_key
+
+# LangChain settings
 LANGCHAIN_TRACING_V2=true
 LANGCHAIN_ENDPOINT=https://api.smith.langchain.com
 LANGCHAIN_API_KEY=your_key
 LANGCHAIN_PROJECT=figma-code-gen
 
-# go to https://www.duckdns.org/domains, register, add domain and and get token
-DUCKDNS_TOKEN=your-token
-DUCKDNS_DOMAIN=your.domain.com
-
+# Email для Let's Encrypt і Traefik
 ACME_EMAIL=your.email@gmail.com
+
+# IP адреса сервера на Hetzner
+SERVER_IP=159.69.248.000
+
+
+# секретний хедер і токен для Traefik. Це потрібно для захисту від рандомних ботів.
+# до кожного сервера потрібно добавити цей хедер
+TRAFEIK_SECRET_HEADER=X-Secret-Header
+TRAFEIK_SECRET_TOKEN=your_secret_token
