--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,7 +65,7 @@ services:
       - my_network
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.api.rule=Host(`uikit-agent.${SERVER_IP}.nip.io`) && Headers(`${TRAFEIK_SECRET_HEADER}`, `${TRAFEIK_SECRET_TOKEN}`)"
+      - "traefik.http.routers.api.rule=Host(`uikit-agent.${SERVER_IP}.nip.io`) && Header(`${TRAFEIK_SECRET_HEADER}`, `${TRAFEIK_SECRET_TOKEN}`)"
       - "traefik.http.routers.api.entrypoints=websecure"
       - "traefik.http.routers.api.tls.certresolver=myresolver"
       - "traefik.http.services.api.loadbalancer.server.port=8000"
