add mcp server from private npm package

--- a/.env-template
+++ b/.env-template
@@ -11,14 +11,17 @@ LANGCHAIN_ENDPOINT=https://api.smith.langchain.com
 LANGCHAIN_API_KEY=your_key
 LANGCHAIN_PROJECT=figma-code-gen
 
-# Email для Let's Encrypt і Traefik
+# Email for Let's Encrypt and Traefik
 ACME_EMAIL=your.email@gmail.com
 
-# IP адреса сервера на Hetzner
+# Server IP address (Hetzner)
 SERVER_IP=159.69.248.000
 
 
-# секретний хедер і токен для Traefik. Це потрібно для захисту від рандомних ботів.
-# до кожного сервера потрібно добавити цей хедер
-TRAFEIK_SECRET_HEADER=X-Secret-Header
-TRAFEIK_SECRET_TOKEN=your_secret_token
+# Secret header and token for Traefik. Needed for protection against random bots.
+# This header must be added to each server.
+TRAEFIK_SECRET_HEADER=X-Secret-Header
+TRAEFIK_SECRET_TOKEN=your_secret_token
+
+# Google Artifact Registry stringified json key for private NPM registry authentication
+GCP_NPM_TOKEN=json_stringified_service_account_key
