--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,11 +51,13 @@ services:
 
   # Service 2: API
   api:
-    build: .
+    build:
+      context: .
+      args:
+        - GCP_NPM_TOKEN=${GCP_NPM_TOKEN}
     restart: always
     command: uvicorn main:app --host 0.0.0.0 --port 8000
-    # ports:
-    #   - "8000:8000" # Removed: Accessed via Traefik now
+
     environment:
       - REDIS_HOST=redis
     depends_on:
@@ -65,14 +67,17 @@ services:
       - my_network
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.api.rule=Host(`uikit-agent.${SERVER_IP}.nip.io`) && Header(`${TRAFEIK_SECRET_HEADER}`, `${TRAFEIK_SECRET_TOKEN}`)"
+      - "traefik.http.routers.api.rule=Host(`uikit-agent.${SERVER_IP}.nip.io`) && Header(`${TRAEFIK_SECRET_HEADER}`, `${TRAEFIK_SECRET_TOKEN}`)"
       - "traefik.http.routers.api.entrypoints=websecure"
       - "traefik.http.routers.api.tls.certresolver=myresolver"
       - "traefik.http.services.api.loadbalancer.server.port=8000"
 
   # Service 3: Worker
   worker:
-    build: .
+    build:
+      context: .
+      args:
+        - GCP_NPM_TOKEN=${GCP_NPM_TOKEN}
     restart: always
     command: huey_consumer tasks.huey --workers 2
     environment:
