--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,12 +21,12 @@ dependencies = [
     "langgraph-checkpoint==3.0.1",
     "langgraph-prebuilt==1.0.4",
     "langgraph-sdk==0.2.9",
-
     "uvloop>=0.22.1",
     "pydantic>=2.12.4",
     "pydantic-settings>=2.12.0",
     "rich>=14.2.0",
     "fastapi-limiter>=0.1.6",
+    "mcp>=1.23.1",
 ]
 
 
