--- a/.env-template
+++ b/.env-template
@@ -10,6 +10,7 @@ LANGCHAIN_TRACING_V2=true
 LANGCHAIN_ENDPOINT=https://api.smith.langchain.com
 LANGCHAIN_API_KEY=your_key
 LANGCHAIN_PROJECT=figma-code-gen
+MODEL_CODEGEN=gemini-2.5-pro
 
 # Email for Let's Encrypt and Traefik
 ACME_EMAIL=your.email@gmail.com
