add status report events for tracking progress. + endpoint to get the data

--- a/.env-template
+++ b/.env-template
@@ -18,6 +18,8 @@ ACME_EMAIL=your.email@gmail.com
 # Server IP address (Hetzner)
 SERVER_IP=159.69.248.000
 
+# Redis task history TTL in seconds (default: 14 days)
+TASK_HISTORY_TTL=1209600
 
 # Secret header and token for Traefik. Needed for protection against random bots.
 # This header must be added to each server.
