--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "fastapi-limiter>=0.1.6",
     "mcp>=1.23.1",
     "anyio>=4.12.0",
+    "sentry-sdk[fastapi]>=2.47.0",
 ]
 
 
