--- a/.env-template
+++ b/.env-template
@@ -1,5 +1,7 @@
 REDIS_HOST=redis
-ENVIRONMENT=prod
+
+# Environment: local, prod, dev
+ENV=local
 
 # API keys for LLMs
 OPENAI_API_KEY=your_key
@@ -11,6 +13,9 @@ LANGCHAIN_ENDPOINT=https://api.smith.langchain.com
 LANGCHAIN_API_KEY=your_key
 LANGCHAIN_PROJECT=figma-code-gen
 MODEL_CODEGEN=gemini-2.5-pro
+
+# Sentry
+SENTRY_DSN=sentry_url
 
 # Email for Let's Encrypt and Traefik
 ACME_EMAIL=your.email@gmail.com
