--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,7 @@ services:
 
     environment:
       - REDIS_HOST=redis
+      - ENV=prod
     depends_on:
       redis:
         condition: service_healthy
@@ -82,6 +83,7 @@ services:
     command: huey_consumer tasks.huey --workers 2
     environment:
       - REDIS_HOST=redis
+      - ENV=prod
     depends_on:
       - redis
     networks:
