--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,7 +68,12 @@ services:
       - my_network
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.api.rule=Host(`uikit-agent.${SERVER_IP}.nip.io`) && Header(`${TRAEFIK_SECRET_HEADER}`, `${TRAEFIK_SECRET_TOKEN}`)"
+
+      # Rule: Match Host AND (require Secret Header OR allow OPTIONS method).
+      # We explicitly allow OPTIONS to bypass the header check because browsers
+      # do NOT send custom headers during CORS preflight requests.
+      - "traefik.http.routers.api.rule=Host(`uikit-agent.${SERVER_IP}.nip.io`) && (Header(`${TRAEFIK_SECRET_HEADER}`, `${TRAEFIK_SECRET_TOKEN}`) || Method(`OPTIONS`))"
+
       - "traefik.http.routers.api.entrypoints=websecure"
       - "traefik.http.routers.api.tls.certresolver=myresolver"
       - "traefik.http.services.api.loadbalancer.server.port=8000"
