--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,5 +2,10 @@
   "recommendations": [
     "charliermarsh.ruff",
     "ms-python.python"
+  ],
+  "unwantedRecommendations": [
+    "ms-python.pylint",
+    "ms-python.flake8",
+    "ms-python.black-formatter"
   ]
 }
