add web codegen flow with code fix and retry. Improve imports

--- a/.env-template
+++ b/.env-template
@@ -35,3 +35,28 @@ TRAEFIK_SECRET_TOKEN=your_secret_token
 
 # Google Artifact Registry stringified json key for private NPM registry authentication
 GCP_NPM_TOKEN=json_stringified_service_account_key
+
+
+# --- GIT & REPO SETTINGS ---
+
+# LOCAL DEVELOPMENT VARIABLES - Uncomment these when developing locally
+# Store preview projects in the temp folder inside the project directory
+# WEB_REPO_PATH=./temp_repos/web
+# MOBILE_REPO_PATH=./temp_repos/mobile
+
+
+# PRODUCTION (VPS/Hetzner) VARIABLES
+# Uncomment these when deploying to production VPS
+# WEB_REPO_PATH=/repos/web
+# MOBILE_REPO_PATH=/repos/mobile
+GIT_SSH_KEY_PATH=/root/.ssh/id_ed25519
+# Note: Locally, SSH key is not specified (Git automatically uses your system key from ~/.ssh/id_rsa)
+
+
+# Repository URLs (required for both local and production)
+WEB_REPO_URL=git@bitbucket.org:company/web-preview.git
+MOBILE_REPO_URL=git@bitbucket.org:company/mobile-preview.git
+
+# Vercel doesn't trigger rebuilds when user email doesn't have access to the project
+# Email address that has access to build projects on Vercel (required to trigger project rebuilds)
+EMAIL_WITH_VERCEL_ACCESS=user@example.com
